--- a/index.html
+++ b/index.html
@@ -1,175 +1,155 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Network Traffic Analyzer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        .anomaly {
-            background-color: #ffcccc;
-            animation: blink 1s step-end infinite;
-        }
-        @keyframes blink {
-            50% { background-color: #ff9999; }
-        }
-        .packet-row:hover {
-            background-color: #f0f0f0;
-        }
-        .stat-card {
-            transition: all 0.3s ease;
-        }
-        .stat-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Live IDS Dashboard</title>
+
+  <!-- ——💅  BASIC STYLE  —— -->
+  <style>
+    :root {
+      --bg: #141e36;
+      --card: #1e293b;
+      --text: #ecf1f8;
+      --accent-pink: #f92c88;
+      --accent-orange: #ff8a37;
+      --accent-blue: #3b82f6;
+      --radius: 12px;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: system-ui, sans-serif;
+    }
+
+    body {
+      background: var(--bg);
+      color: var(--text);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem 1rem;
+      min-height: 100vh;
+      gap: 2rem;
+    }
+
+    h1 {
+      font-size: 2rem;
+      letter-spacing: 1px;
+      text-align: center;
+    }
+
+    #packets {
+      width: 100%;
+      max-width: 1000px;
+      border-collapse: collapse;
+      border-radius: var(--radius);
+      overflow: hidden;
+      background: var(--card);
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+    }
+
+    #packets thead {
+      background: rgba(255, 255, 255, 0.05);
+    }
+
+    #packets th,
+    #packets td {
+      padding: 0.5rem 0.75rem;
+      text-align: left;
+      white-space: nowrap;
+    }
+
+    #packets tbody tr:nth-child(even) {
+      background: rgba(255, 255, 255, 0.03);
+    }
+
+    .badge {
+      padding: 0 0.5rem;
+      border-radius: var(--radius);
+      font-size: 0.75rem;
+      font-weight: 600;
+      display: inline-block;
+    }
+
+    .same   { background: var(--accent-pink);   }
+    .oversz { background: var(--accent-orange); }
+    .stdev  { background: var(--accent-blue);   }
+  </style>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row bg-dark text-white p-3">
-            <div class="col">
-                <h1><i class="fas fa-network-wired"></i> Network Traffic Analyzer</h1>
-                <p class="mb-0">Monitoring all network traffic in real-time</p>
-            </div>
-        </div>
+  <h1>🚨 Intrusion‑Detection Dashboard</h1>
 
-        <div class="row mt-3">
-            <div class="col-md-3">
-                <div class="card stat-card mb-3 bg-primary text-white">
-                    <div class="card-body">
-                        <h5 class="card-title"><i class="fas fa-boxes"></i> Total Packets</h5>
-                        <h2 id="total-packets" class="card-text">0</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card stat-card mb-3 bg-success text-white">
-                    <div class="card-body">
-                        <h5 class="card-title"><i class="fas fa-exchange-alt"></i> TCP</h5>
-                        <h2 id="tcp-count" class="card-text">0</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card stat-card mb-3 bg-info text-white">
-                    <div class="card-body">
-                        <h5 class="card-title"><i class="fas fa-random"></i> UDP</h5>
-                        <h2 id="udp-count" class="card-text">0</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card stat-card mb-3 bg-danger text-white">
-                    <div class="card-body">
-                        <h5 class="card-title"><i class="fas fa-exclamation-triangle"></i> Anomalies</h5>
-                        <h2 id="anomaly-count" class="card-text">0</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <table id="packets">
+    <thead>
+      <tr>
+        <th>Time</th>
+        <th>Source IP</th>
+        <th>Destination IP</th>
+        <th>Bytes</th>
+        <th>Anomaly</th>
+      </tr>
+    </thead>
+    <tbody id="tbody"></tbody>
+  </table>
 
-        <div class="row mt-3">
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-header bg-dark text-white">
-                        <i class="fas fa-list"></i> Recent Packets
-                    </div>
-                    <div class="card-body p-0">
-                        <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
-                            <table class="table table-striped table-hover mb-0">
-                                <thead class="sticky-top bg-light">
-                                    <tr>
-                                        <th>Time</th>
-                                        <th>Source IP</th>
-                                        <th>Destination IP</th>
-                                        <th>Size</th>
-                                        <th>Protocol</th>
-                                        <th>Service</th>
-                                        <th>Status</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="packet-table">
-                                    <!-- Packet data will be inserted here -->
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-header bg-dark text-white">
-                        <i class="fas fa-exclamation-circle"></i> Recent Anomalies
-                    </div>
-                    <div class="card-body p-0">
-                        <div class="list-group list-group-flush" style="max-height: 400px; overflow-y: auto;" id="anomaly-list">
-                            <!-- Anomalies will be inserted here -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+  <!-- ——📡  SOCKET.IO  —— -->
+  <!-- Include socket.io from CDN as fallback if local path fails -->
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      const script = document.createElement('script');
+      script.src = '/socket.io/socket.io.js';
+      script.onload = initSocket;
+      script.onerror = () => {
+        console.warn('Local socket.io.js not found. Loading from CDN...');
+        const cdnScript = document.createElement('script');
+        cdnScript.src = 'https://cdn.socket.io/4.7.5/socket.io.min.js';
+        cdnScript.onload = initSocket;
+        document.head.appendChild(cdnScript);
+      };
+      document.head.appendChild(script);
+    });
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        function updateUI(data) {
-            // Update stats
-            document.getElementById('total-packets').textContent = data.stats.total_packets;
-            document.getElementById('tcp-count').textContent = data.stats.tcp_count;
-            document.getElementById('udp-count').textContent = data.stats.udp_count;
-            document.getElementById('anomaly-count').textContent = data.stats.anomalies.length;
+    function initSocket() {
+      const tbody = document.getElementById('tbody');
+      const socket = io();
 
-            // Update packet table
-            const packetTable = document.getElementById('packet-table');
-            packetTable.innerHTML = '';
-            data.packets.slice().reverse().forEach(packet => {
-                const row = document.createElement('tr');
-                row.className = 'packet-row';
-                if (packet.anomalies.length > 0) {
-                    row.classList.add('anomaly');
-                }
-                
-                row.innerHTML = `
-                    <td>${packet.timestamp}</td>
-                    <td>${packet.src_ip}</td>
-                    <td>${packet.dst_ip}</td>
-                    <td>${packet.size}</td>
-                    <td>${packet.protocol}</td>
-                    <td>${packet.service}</td>
-                    <td>${packet.anomalies.join(', ')}</td>
-                `;
-                packetTable.appendChild(row);
-            });
+      socket.on('connect', () => {
+        console.log('🌐 Connected to Socket.IO');
+      });
 
-            // Update anomalies list
-            const anomalyList = document.getElementById('anomaly-list');
-            anomalyList.innerHTML = '';
-            data.stats.anomalies.slice().reverse().forEach(anomaly => {
-                const item = document.createElement('a');
-                item.className = 'list-group-item list-group-item-danger';
-                item.innerHTML = `
-                    <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">${anomaly.anomalies.join(', ')}</h6>
-                        <small>${anomaly.timestamp}</small>
-                    </div>
-                    <p class="mb-1">${anomaly.src_ip} → ${anomaly.dst_ip} (${anomaly.size} bytes)</p>
-                    <small>${anomaly.protocol} ${anomaly.service}</small>
-                `;
-                anomalyList.appendChild(item);
-            });
-        }
+      socket.on('packet', pkt => {
+        const time = (() => {
+          const date = new Date(pkt.ts / 1000);
+          return date.toLocaleTimeString([], { hour12: false }) + '.' + String(date.getMilliseconds()).padStart(3, '0');
+        })();
 
-        function fetchData() {
-            fetch('/data')
-                .then(response => response.json())
-                .then(data => updateUI(data))
-                .catch(error => console.error('Error:', error));
-        }
+        const tr = document.createElement('tr');
+        tr.innerHTML = `
+          <td>${time}</td>
+          <td>${pkt.src}</td>
+          <td>${pkt.dst}</td>
+          <td>${pkt.size}</td>
+          <td></td>
+        `;
 
-        // Update every second
-        setInterval(fetchData, 1000);
-        fetchData(); // Initial load
-    </script>
+        const anomalyCell = tr.lastElementChild;
+        if (pkt.same_ip)  anomalyCell.innerHTML += '<span class="badge same">Src=Dst</span> ';
+        if (pkt.oversize) anomalyCell.innerHTML += '<span class="badge oversz">Oversize</span> ';
+        if (pkt.statdev)  anomalyCell.innerHTML += '<span class="badge stdev">Outlier</span> ';
+        if (!anomalyCell.textContent.trim()) anomalyCell.textContent = '—';
+
+        tbody.prepend(tr);
+        if (tbody.rows.length > 150) tbody.deleteRow(-1);
+      });
+
+      socket.on('disconnect', () => {
+        console.warn('🔌 Socket.IO disconnected');
+      });
+    }
+  </script>
 </body>
 </html>
